--- a/src/integTest/resources/application-test.yml
+++ b/src/integTest/resources/application-test.yml
@@ -3,5 +3,8 @@ sensors:
     location: location1
 
 influxdb:
+  database: dbName
+  username: user
+  password: pass
   measurements:
     temperature: temp
