--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+spring:
+  application:
+    name: sensor-data-collector
+
 server:
   port: 80
 
@@ -6,3 +10,6 @@ management:
     web:
       exposure:
         include: "*"
+  metrics:
+    tags:
+      application: ${spring.application.name}
