Update jdk to 17

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-ARG JAVA_IMAGE=openjdk:15
+ARG JAVA_IMAGE=openjdk:17
 
 FROM ${JAVA_IMAGE} as build
 
@@ -6,7 +6,7 @@ WORKDIR /src
 
 COPY ./ /src
 
-RUN microdnf install unzip
+RUN microdnf install unzip findutils
 
 # Build without integrationTest cause it uses testcontainers and required docker daemon
 RUN ./gradlew clean build -x integrationTest && \
